--- a/index.ipynb
+++ b/index.ipynb
@@ -75,11 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create database connection here"
+    "import sqlite3\n",
+    "conn = sqlite3.connect('pets_database.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -97,10 +99,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''select * from cats;''')\n",
+    "c.fetchall()\n",
     "# select all data from cats data here"
    ]
   },
@@ -141,11 +170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, None, None, 'Tabby', None),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select all cats order by age here"
+    "c.execute('''select * from cats order by age;''').fetchall()"
    ]
   },
   {
@@ -177,11 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 'Moe', 10, 'Tabby', None),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats order by age descending here"
+    "c.execute('''select * from cats order by age desc;''').fetchall()# select cats order by age descending here"
    ]
   },
   {
@@ -548,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
